--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "react-tabs": "^3.1.0",
+    "sanitize.css": "^11.0.0",
     "shopify-buy": "^2.8.1"
   },
   "scripts": {
